# ssh-config-manager

./: CLAUDE.md  CLI_HELP.md  Cargo.toml  README.md  build.rs  lefthook.yml  mise.toml
.github/workflows/: release.yml
scripts/: calculate-sha256.sh  check-tag-version.sh  generate-homebrew-formula.sh  update-homebrew.sh
src/: archive.rs  cli.rs  lib.rs  main.rs
src/cli/: mod.rs
src/cli/commands/: clone.rs  create.rs  delete.rs  edit.rs  export.rs  host_builder.rs  import.rs  ls.rs  mod.rs  prune.rs
src/commands/: clone.rs  create.rs  delete.rs  edit.rs  export.rs  host_builder.rs  import.rs  ls.rs  mod.rs  open.rs  prune.rs  tui.rs
src/commands/tui/: app.rs  editor.rs  fields.rs  render.rs
src/config/: mod.rs  parser.rs  types.rs  writer.rs
src/core/: archive.rs  hosts.rs  mod.rs  ssh.rs
src/core/config/: types.rs  writer.rs
src/tui/: app.rs  editor.rs  fields.rs  mod.rs
