[package]
name = "sshm"
repository = "https://github.com/YewFence/ssh-config-manager"
version = "0.0.6"
description = "Manage ~/.ssh/config with ease"
license = "MIT"
edition = "2024"
authors = ["YewFence"]

[[bin]]
name = "sshm"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
inquire = "0.9"
anyhow = "1"
comfy-table = "7"
dirs = "6"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap-markdown = "0.1"
