[package]
name = "sshm"
repository = "https://github.com/YewFence/ssh-config-manager"
version = "0.0.6"
description = "Manage ~/.ssh/config with ease"
license = "MIT"
edition = "2024"
authors = ["YewFence"]

[[bin]]
name = "sshm"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
inquire = "0.9"
anyhow = "1"
comfy-table = "7"
dirs = "6"
chrono = { version = "0.4", features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap-markdown = "0.1"
