[package]
name = "sshm"
repository = "https://github.com/YewFence/ssh-config-manager"
version = "0.1.0"
description = "Manage ~/.ssh/config with ease"
license = "MIT"
edition = "2024"
authors = ["YewFence"]

[[bin]]
name = "sshm"
path = "src/main.rs"

[features]
cli-docs = ["dep:clap-markdown"]

[[bin]]
name = "gen-cli-help"
path = "src/bin/gen-cli-help.rs"
required-features = ["cli-docs"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap-markdown = { version = "0.1", optional = true }
inquire = "0.9"
anyhow = "1"
comfy-table = "7"
dirs = "6"
chrono = { version = "0.4", features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
zip = { version = "8.5.1", default-features = false, features = ["deflate"] }

[build-dependencies]
clap = { version = "4", features = ["derive"] }
